(fix) Small Spacing Changes
Fixes some resume spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,17 @@
     --header: #ff5a70;
 }
 
+:root.dark {
+    --bg-color: #2a2a39;
+    --white: #29284c;
+    --header-text: #fffcea;
+    --text: #e1f0ff;
+    --link: #3ed4ef;
+    --accent: #2b52c8;
+    --gradient: #0b328d;
+    --header: #0f0941;
+}
+
 html {
     font-size: 16px;
     scroll-behavior: smooth;
@@ -300,7 +311,7 @@ ul.tags li:hover {
 
 .main-content div {
     padding: 0;
-    margin: 0.5rem 0;
+    margin: 0.3rem 0;
 }
 
 .resume-heading .flex {
@@ -329,7 +340,6 @@ ul.tags li:hover {
 }
 
 .resume-page ul {
-    margin-top: 1rem;
     list-style: inside;
 }
 
